# hr-is

./: interfaces
backend/: Cargo.toml
backend/bindings/: Access.ts  AvailableLeave.ts  COAInsert.ts  COATypeView.ts  CancelCOA.ts  EmpID.ts  EmpToken.ts  EmployeeLogin.ts  LeaveSummarywDetais.ts
backend/src/: id_builder.rs  jwt.rs  main.rs
backend/src/coa/: cancel_coa.rs  get_coa.rs  get_types.rs  mod.rs  post_coa.rs  update_coa.rs
backend/src/config/: errors.rs  mod.rs
backend/src/leave/: cancel.rs  get_credits.rs  get_leaves.rs  get_pending.rs  mod.rs  post_leave.rs  update_leave.rs
backend/src/users/: get_info.rs  login.rs  mod.rs
coa/: pnpm-lock.yaml  tailwind.config.js
coa/src/bindings/: Employee.ts  EmployeeInfo.ts  GetAvailableLeaves.ts  Leave.ts  LeaveView.ts  PendingLeaves.ts
coa/src/pages/: [token].tsx  coa.tsx  dashboard.tsx  index.tsx
coa/src/styles/: globals.css
coa/src/utils/: dates.ts  store.ts  useUsers.ts
leave/: package.json
leave/src/bindings/: COADetailInsert.ts  COASummary.ts  COAUpdate.ts  CancelLeave.ts  ErrMsg.ts  LeaveInsert.ts  LeaveSummary.ts  LeaveUpdate.ts  Schedule.ts
leave/src/pages/: [token].tsx  _app.tsx  dashboard.tsx  index.tsx  leave.tsx
leave/src/utils/: dates.ts  store.ts  useUsers.ts
main/: package.json  pnpm-lock.yaml  tailwind.config.js
main/src/bindings/: COADetail.ts  COASummarywDetails.ts  COAType.ts  COAView.ts  Employee.ts  Leave.ts  LeaveDetail.ts  LeaveDetailInsert.ts  LeaveInsert.ts  LeaveSummary.ts  LeaveSummarywDetais.ts
main/src/pages/: dashboard.tsx  index.tsx
main/src/utils/: api.ts  (+2 more)
(+9 files in other folders)
