[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "mysql", "macros", "chrono"] }
thiserror = "1.0.38"
ts-rs = { version = "6.2.1", features = ["chrono", "chrono-impl"] }
